--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 #home-page {
-    main{
+    .wrapper{
         max-width:1000px;
         margin: 0 auto;
     }
